add branch and modify application.yml

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -67,7 +67,8 @@ grails:
                 staticparts: none
     asset:
         babel:
-            enabled: true
+            enabled: false
+
 ---
 hibernate:
     cache:
