working example with .js processing in all phases

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,16 @@ ext {
 assets {
     minifyJs = true
     minifyCss = true
+    configOptions = [
+        babel: [
+            enabled: true,
+            processJsFiles: true,
+            options: [
+                blacklist: ['useStrict'],
+                loose: 'all'
+            ]
+        ]
+    ]
 }
 
 repositories {
