implemented usage of babel-asset-pipeline 2.0.0 with webpack and stuff

--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -68,14 +68,8 @@ grails:
     assets:
         babel:
             enabled: true,
-            processor: 'node'
+            processor: 'webpack-dev-server'
             processJsFiles: true
-            nodePath: '/Users/philipp/.nvm/versions/node/v5.0.0/bin/node'
-            browserifyPath: 'node_modules/browserify/bin/cmd.js'
-            options:
-                blacklist: ['useStrict']
-                loose: 'all'
-
 ---
 hibernate:
     cache:
