--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,19 @@ buildscript {
     dependencies {        
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath 'com.bertramlabs.plugins:asset-pipeline-gradle:2.6.9'
+        classpath 'com.bertramlabs.plugins:asset-pipeline-gradle:2.7.4'
         classpath "org.grails.plugins:hibernate:4.3.10.5"
     }
 }
 
+
 plugins {
     id "io.spring.dependency-management" version "0.5.2.RELEASE"
+}
+
+configurations.all {
+    // check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
 version "0.1"
@@ -40,14 +46,8 @@ assets {
     configOptions = [
         babel: [
             enabled: true,
-            processor: 'node',
+            processor: 'webpack',
             processJsFiles: true,
-            nodePath: '/Users/philipp/.nvm/versions/node/v5.0.0/bin/node',
-            browserifyPath: 'node_modules/browserify/bin/cmd.js',
-            options: [
-                blacklist: ['useStrict'],
-                loose: 'all'
-            ]
         ]
     ]
 }
@@ -71,15 +71,13 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-tomcat"
     compile "org.grails:grails-dependencies"
     compile "org.grails:grails-web-boot"
-
     compile "org.grails.plugins:hibernate"
     compile "org.grails.plugins:cache"
     compile "org.hibernate:hibernate-ehcache"
     compile "org.grails.plugins:scaffolding"
 
     runtime "org.grails.plugins:asset-pipeline"
-    assets 'net.errbuddy.plugins:babel-asset-pipeline:2.0.0-SNAPSHOT'
-
+    assets group: "net.errbuddy.plugins", name: "babel-asset-pipeline", version: "2.0.0-SNAPSHOT", changing: true
 
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
