--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,6 @@ plugins {
     id "io.spring.dependency-management" version "0.5.2.RELEASE"
 }
 
-configurations.all {
-    // check for updates every build
-    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-}
-
 version "0.1"
 group "babel.test.app"
 
@@ -49,6 +44,11 @@ assets {
             processor: 'webpack',
             processJsFiles: true,
         ]
+    ]
+    minifyOptions = [
+            languageMode: 'ES6',
+            targetLanguage: 'ES5', //Can go from ES6 to ES5 for those bleeding edgers
+            optimizationLevel: 'SIMPLE',
     ]
 }
 
@@ -77,7 +77,8 @@ dependencies {
     compile "org.grails.plugins:scaffolding"
 
     runtime "org.grails.plugins:asset-pipeline"
-    assets group: "net.errbuddy.plugins", name: "babel-asset-pipeline", version: "2.0.0-SNAPSHOT", changing: true
+
+    assets "net.errbuddy.plugins:babel-asset-pipeline:2.0.0-SNAPSHOT"
 
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
