--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -68,7 +68,7 @@ grails:
     assets:
         babel:
             enabled: true,
-            processor: 'webpack-dev-server'
+            processor: 'webpack'
             processJsFiles: true
 ---
 hibernate:
@@ -91,6 +91,12 @@ dataSource:
 
 environments:
     development:
+        grails:
+            assets:
+                babel:
+                    enabled: true,
+                    processor: 'webpack-dev-server'
+                    processJsFiles: true
         dataSource:
             dbCreate: create-drop
             url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
